--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "diawi",
-  "version": "0.4.0",
-  "description": "Upload an ipa, apk or zip to Diawi",
+  "name": "diawi-snapshot",
+  "version": "0.0.1",
+  "description": "Upload an ipa, apk or zip to Diawi, snapshot from v0.4.0 to detect upload error!",
   "homepage": "https://github.com/deanWombourne/node-diawi",
   "main": "diawi.js",
   "bin": {
